# dati-semantic-csv-apis

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  create-dataframe.sh  create-datapackage.sh  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: asset-csv-generation.yml_no
.github/workflows/: apistore-generation.yml  asset-csv-generation.yml  ci-pre-tabular.yml  ci-tabular.yml  lint.yml  publish-api.yml  test.yml
apiv1/: Dockerfile  components.oas3.yaml  entrypoint.py  requirements-dev.txt  requirements.txt
apiv1/_generated/: models.py
apiv1/common/: __init__.py  cache_control_middleware.py  errors.py  printable_parameters_middleware.py  utils.py
apiv1/openapi/: vocabularies.yaml
apiv1/tests/: conftest.py  harness.py  test_asgi.py  test_remote_harvest_db.py
apiv1/vocabularies/: __init__.py  __main__.py  app.py  asgi.py  catalog.py  components.oas3.yaml  data.py  download.py  openapi.yaml
assets/controlled-vocabularies/: vocabularies.sqlite
docs/: README.api.md  README.csv.md  doc-style.instructions.md  github-workflow-csv.yaml  glossario.md  manual-api.md  manual-csv.md  manual-workflow-apistore.it.md
docs/adr/: 0001-use-adr.md  0002-static-testing.md  0003-use-python312.md  0004-test-expectations.md  0005-test-snapshots.md  0006-datapackage-lang.md  0007-cli-overview.md  0008-datapackage-context.md  0009-api-exceptions.md  0010-openapi-bcp.md  0011-jsonld-frame-validation.md  0012-openapi-stub.md  0013-ci-datapackage-csv.md  0014-api-datastore.md  0015-jsonld-prefilter.md  0016-openapi-max-samples.md  0017-harvesting-poc.md  0018-asgi-production-server.md  0019-remote-harvest-db.md  0020-api-dump-cache-defer.md  0021-cors-support.md  0022-cursor-pagination-has-more.md  0023-catalog-search-q-covers-description.md  0024-per-vocabulary-oas-spec-endpoint.md  0025-scm-versioned-cli.md  0026-slash-in-notation-identifiers.md
tests/: conftest.py  constants.py  harness.py  test_base.py  test_base.yaml  test_utils.py  testcases.yaml
tests/commands/: conftest.py  test_command_apistore.py  test_command_apistore.yaml  test_command_csv.py  test_command_csv.yaml  test_command_datapackage.py  test_command_datapackage.yaml  test_command_help.py  test_command_help.yaml  test_command_jsonld.py  test_command_jsonld.yaml  test_command_openapi_stub.py  test_command_openapi_stub.yaml  test_command_pipeline.yaml  test_command_utils.py  utils.py
tests/data/: Caddyfile.api-data  Caddyfile.api-data-public  agente_causale-short.ttl  agente_causale.datapackage.yaml  default-skos.frame.yamlld  invalid-datapackage.yaml  invalid-frame.yamlld  invalid-openapi.yaml  no-dialect-datapackage.yaml
tests/framing/: test_create_data.py
tests/harvest/: test_catalog.py  test_harvest.py
tests/openapi/: test_openapi.py  test_openapi_asset.py  test_openapi_jsonschema_builder.py  test_openapi_store.py
tests/store/: test_store.py  test_store_search.py  test_store_search.yaml
tests/tabular/: test_dataresource_stub_context_filters.py  test_dataresource_stub_context_filters.yaml  test_dataresource_stub_field_types.py  test_tabular.py  (+4 more)
tools/: __init__.py  _build_info.py  base.py  projector.py  utils.py
(+123 files in other folders)
