[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dati-semantic-apis"
description = "Semantic APIs and controlled vocabularies for data interoperability"
readme = "README.md"
requires-python = ">=3.12"
license = "AGPL-3.0-or-later"
authors = [
    {name = "Roberto Polli", email = "roberto.polli@par-tec.it"}
]
keywords = [
    "semantic",
    "api",
    "rdf",
    "vocabulary",
    "openapi",
    "skos",
    "frictionless"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
#    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dynamic = [ "dependencies", "optional-dependencies", "version" ]

[tool.setuptools.dynamic]
dependencies = { file = [ "requirements.txt" ] }
optional-dependencies.dev = { file = [ "requirements-dev.txt" ] }


[project.urls]
Homepage = "https://github.com/teamdigitale/dati-semantic-csv-apis"
Repository = "https://github.com/teamdigitale/dati-semantic-csv-apis"
Issues = "https://github.com/teamdigitale/dati-semantic-csv-apis/issues"

[tool.setuptools.packages.find]
include = ["tools", "tools.commands", "tools.data", "tools.openapi", "tools.vocabulary", "tools.tabular"]
exclude = ["docs*", "tests*", "assets*", "apiv1*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.csv", "*.json", "*.ttl", "*.yamlld"]

#
# Testing configuration.
#
[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
norecursedirs = "assets docs build dist *.egg-info .git .tox var/large_ml_model/ .*"
# XXX: To speed up tests, coverage is only enabled in tox -e coverage.
# Skip heavy asset tests by default; run explicitly with `-m asset` when needed.
addopts = "-v --durations=3 -m 'not asset' -p no:memray -p no:profiling -p no:legacypath"
console_output_style = "count"
testpaths = ["tests"]
# XXX: Re-enable failing when no tests are collected.
# empty_parameter_set_mark = "fail_at_collect"
collect_imported_tests = false
markers = [
  "asset: marks tests as processing entire assets",
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

#
# Linting configuration.
#
[tool.ruff]
line-length = 80
# target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["tools"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = [
    "tests/",
    "agent-skills/",
]

[[tool.mypy.overrides]]
module = [
    "pyld.*",
    "frictionless.*",
    "oxrdflib.*",
    "genson.*",
]
ignore_missing_imports = true
